--- a/app.css
+++ b/app.css
@@ -18,7 +18,7 @@
     transition: 0.5s;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    /* width: 100%; */
 }
 .box:hover{
     background-color: green;
