--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
     width: 100%;
 }
 .box{
-    background-color: red;
+    background-color: rgb(243, 231, 8);
     padding: 50px;
     margin: 5px;
     text-align: center;
@@ -22,5 +22,5 @@
 }
 .box:hover{
     background-color: green;
-    border: black 5px dotted ;
+   
 }
